--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,30 @@
     margin-right: 20px;
 }
 /* nav-bar */
-.navbar-outer{
+.nav-bar-outer{
     width:100%;
     height: 60px;
-    border-bottom:1px solid #7f8c8d;
+    border-bottom: 1px solid #7f8c8d;
+    display: flex;
 }
+.nav-inner-context{
+    height: 100%;
+    border : 1px solid red
+}
+.nav-left{
+    width: 250px;
+    display: flex;
+    align-items: center;
+    
+}
+.nav-left img{
+    height: 50px;
+  
+
+}
+.nav-right{
+    flex:1;
+}
+
+
 /* nav-bar */
