--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-*{
-    margin:0;
-    padding:0%;
-    font-family: 'Roboto', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Chela+One&family=Mooli&family=Roboto&family=Rubik+Iso&display=swap');
 
-}
-/* upper header */
+
 .upper-outer{
     width: 100%;
     height: 50px;
     background-color: #3E54A3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-}
-.upper-outer h4 a{
-    color: white;
-}
-.upper-outer span{
-    margin-right: 20px;
-}
-/* nav-bar */
-.nav-bar-outer{
-    width:100%;
-    height: 60px;
-    border-bottom: 1px solid #7f8c8d;
-    display: flex;
-}
-.nav-inner-context{
-    height: 100%;
-    border : 1px solid red
-}
-.nav-left{
-    width: 250px;
-    display: flex;
-    align-items: center;
-    
-}
-.nav-left img{
-    height: 50px;
-  
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
 
 }
-.nav-right{
-    flex:1;
-    
-}
-
-.nav-right ul{
-    list-style: none;
-   
-}
-.nav-right li{
-    display: inline-block;
-    margin-right: 20px;
-}
-
-
-/* nav-bar */
