--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,72 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Chela+One&family=Mooli&family=Roboto&family=Rubik+Iso&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
 
+/* upper header */
 .upper-outer{
     width: 100%;
     height: 50px;
     background-color: #3E54A3;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.upper-outer h4 a{
+    color: white;
+}
+
+.upper-outer i{
+    margin-right: 10px;
+}
+
+/* upper header */
+/* navbar */
+.nav-bar-outer{
+    width: 100%;
+    height: 67px;
+    border-bottom: 1px solid #DBE5E6;
+    display: flex;
+   
+    
+}
+.nav-inner-context{
+    height: 100%;
+    border : 1px solid red;
+    display: flex;
+    
+    
+}
+.nav-left{
+    width: 250px;
+    align-items: center;
+   }
+.nav-right{
+    flex: 1;
 
 }
+
+.nav-left img{
+    height: 50px;
+   
+}
+.nav-right ul{
+    list-style: none;
+}
+
+.nav-right li{
+    display: inline-block;
+    margin-right: 20px;
+}
+.nav-right li:nth-child(4){
+    margin-right: 0;
+}
+
+/* navbar */
+    
+
