--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Chela+One&family=Mooli&family=Roboto&family=Rubik+Iso&display=swap');
+
 
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Barlow', sans-serif;
 }
 
 /* upper header */
@@ -37,7 +38,6 @@
 }
 .nav-inner-context{
     height: 100%;
-    border : 1px solid red;
     display: flex;
     
     
@@ -48,6 +48,9 @@
    }
 .nav-right{
     flex: 1;
+    align-items: center;
+    justify-content: end;
+    
 
 }
 
@@ -57,6 +60,7 @@
 }
 .nav-right ul{
     list-style: none;
+    
 }
 
 .nav-right li{
@@ -66,6 +70,67 @@
 .nav-right li:nth-child(4){
     margin-right: 0;
 }
+.nav-right a{
+    position: relative;
+    text-decoration: none;
+    font-style: italic;
+    color: black;
+    font-weight: bolder;
+}
+.nav-right a::before,
+.nav-right a::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: red;
+    transition: width 0.2s ease-in-out;
+}
+
+.nav-right a::before {
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nav-right a::after {
+    right: 50%;
+    transform: translateX(50%);
+}
+
+.nav-right a:hover::before,
+.nav-right a:hover::after {
+    width: 100%;
+}
+.badge{
+    background-color: #3E54A3;
+    padding: 4px 8px;
+    font-size: 12px;
+    color: white;
+    padding-bottom: 2px;
+    padding-top: 2px;
+
+    
+   
+}
+.login-with-github-btn{
+    margin: 0 20px;
+    padding: 8px 15px;
+    background-color: #1C2022;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-style: italic;
+    height: 50px;
+    
+}
+.fa-brands{
+    margin-left: 3px;
+}
+
+
+
 
 /* navbar */
     
