--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@
 }
 .login-with-github-btn{
     margin: 0 20px;
-    padding: 8px 15px;
+    padding: 8px 30px;
     background-color: #1C2022;
     color: white;
     border: none;
@@ -127,11 +127,56 @@
 }
 .fa-brands{
     margin-left: 3px;
+   
 }
-
-
-
-
 /* navbar */
+
+/* Main Banner */
+.banner-outer{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    margin-top: 50px;
+}
+.banner-left{
+    flex: 1;
+    padding : 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+}
+.banner-right{
+    width: 500px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.banner-img{
+    width: 93%;
+   
+}
+.banner-main-text{
+    font-size: 40px;
+    color: #3E54A3;
+}
+.login-git-button{
+    margin: 20px 0;
+    padding: 8px 30px;
+    background-color: #ED2C49;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-style: italic;
+    height: 50px;
+  
+
+}
+/* Main Banner */
+
     
 
