--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,16 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 /*Universal style*/
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
-    font-weight: 600;
-    font-style: normal;
 }
+
 /*Universal style*/
 
 /* upper header */
-.upper-outer{
+.upper-outer {
     width: 100%;
     height: 50px;
     background-color: #3E54A3;
@@ -21,30 +19,93 @@
     align-items: center;
     color: white;
 }
-.upper-outer h4 a{
+
+.upper-outer h4 a {
     color: white;
 }
-.briefcase{
+
+.briefcase {
     margin-right: 15px;
 }
+
 /* upper header */
 
 
 /* navbar */
-.nav-bar-outer{
+.nav-bar-outer {
     width: 100%;
     height: 60px;
     border-bottom: 1px solid #bdc3c7;
     display: flex;
 }
-.nav-inner-context{
+
+.nav-inner-context {
     height: 100%;
     border: 1px solid red;
 }
-.nav-left{
+
+.nav-left {
     width: 250px;
+    display: flex;
+    align-items: center;
 }
-.nav-right{
+
+.nav-left img {
+    height: 50px;
+
+
+}
+
+.nav-right {
     flex: 1;
+
 }
+
+/* -------------- */
+.nav-right ul {
+    list-style: none;
+    border: 3px solid chocolate;
+}
+
+.nav-right ul li {
+
+    margin-right: 20px;
+    display: inline-block;
+
+}
+
+.nav-right ul li:last-child {
+    margin: 0;
+}
+.nav-right ul li a{
+    position: relative;
+    text-decoration: none;
+    font-style: italic;
+    color: black;
+    
+}
+.nav-right a:before, 
+.nav-right a:after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: #ED2C49;
+    transition: width 0.5s ease-in-out;
+}
+.nav-right a:before{
+    left: 50%;
+    transform: translateX(-50%);
+}
+.nav-right a:after{
+    right: 50%;
+    transform: translateX(50%);
+}
+.nav-right a:hover:before, 
+.nav-right a:hover:after{
+    width: 100%;
+}
+
+/* ---------------- */
 /* navbar */
