--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /*Universal style*/
 * {
     margin: 0;
     padding: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: "Barlow", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 /*Universal style*/
@@ -41,7 +43,7 @@
 
 .nav-inner-context {
     height: 100%;
-    border: 1px solid red;
+
 }
 
 .nav-left {
@@ -58,13 +60,18 @@
 
 .nav-right {
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-weight: bolder;
+    font-size: small;
 
 }
 
 /* -------------- */
 .nav-right ul {
     list-style: none;
-    border: 3px solid chocolate;
+
 }
 
 .nav-right ul li {
@@ -77,15 +84,19 @@
 .nav-right ul li:last-child {
     margin: 0;
 }
-.nav-right ul li a{
+
+.nav-right ul li a {
     position: relative;
     text-decoration: none;
     font-style: italic;
     color: black;
-    
+
+
+
 }
-.nav-right a:before, 
-.nav-right a:after{
+
+.nav-right a:before,
+.nav-right a:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -94,18 +105,160 @@
     background-color: #ED2C49;
     transition: width 0.5s ease-in-out;
 }
-.nav-right a:before{
+
+.nav-right a:before {
     left: 50%;
     transform: translateX(-50%);
 }
-.nav-right a:after{
+
+.nav-right a:after {
     right: 50%;
     transform: translateX(50%);
 }
-.nav-right a:hover:before, 
-.nav-right a:hover:after{
+
+.nav-right a:hover:before,
+.nav-right a:hover:after {
     width: 100%;
+}
+
+.pro-badge {
+    background-color: #3E54A3;
+    padding: 5px 17px;
+    font-size: 12px;
+    color: white;
+    border-radius: 25px;
+
+}
+
+.login-button {
+    background-color: #1D1F21;
+    margin: 0 20px;
 }
 
 /* ---------------- */
 /* navbar */
+
+/* main banner */
+.banner-outer {
+    width: 100%;
+    height: 700px;
+    display: flex;
+    background-color: #FAFAFA;
+
+}
+
+.banner-left {
+    width: 400px;
+    height: 100%;
+    flex: 1;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+}
+
+.banner-right {
+    width: 600px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-right img {
+    width: 100%;
+    height: 100%;
+}
+
+.banner-main-text {
+    font-size: 40px;
+    color: #3E54A2;
+    letter-spacing: 1.4px;
+    font-size: 50px;
+}
+
+.banner-desc {
+
+    margin-top: 30px;
+    background-color: transparent;
+    color: rgb(115, 115, 115);
+    font-family: Heebo, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.login-git-button {
+    background-color: #ED2C49;
+    margin-top: 50px;
+}
+
+.btn {
+    padding: 12px 20px;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: small;
+    font-weight: bold;
+    font-style: italic;
+}
+.small-banner{
+    margin-top: 30px;
+    width: 600px;
+    height: 110px;
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+}
+.small-banner img{
+    width: 170px;
+    height: 80px;
+    margin-left: 15px;
+}
+.small-banner-desc{
+    margin-left: 20px;
+    line-height: 1.5;
+    font-size: large;
+}
+
+/* main banner */
+
+/* How it works */
+.works-main-outer{
+    min-height: 250px;
+    height: auto;
+   
+    
+}
+.works-title-outer{
+    width: 100%;
+    height: 30px;
+   
+    text-align: center;
+    
+}
+.works-content-inner{
+    height: 250px;
+  
+    display: flex
+}
+.content{
+   flex: 1;
+   
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   flex-direction: column;
+   padding: 15px;
+}
+.content img{
+    width: 100px;
+    height: 100px;
+}
+.desc{
+    text-align: center;
+}
+/* How it works */
